--- a/src/app/spotbie/spotbie-logged-in/ad-manager/ad-manager.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager/ad-manager.component.html
@@ -11,7 +11,7 @@
         </p>
         
         <div class="spotbie-button text-uppercase" (click)="openAdEditor()" *ngIf="!adEditor && userAdList.length < 8">
-            CREATE NEW AD
+            MANAGE ADS
         </div>
 
         <div class="sb-adCreateWrapper" *ngIf='adEditor'>
