--- a/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.css
+++ b/src/app/spotbie/spotbie-logged-in/redeemable/redeemable.component.css
@@ -18,16 +18,47 @@
     background-color: rgba(0,0,0,.2);
     text-align: left;
 }
-.card-body{
+.card-header{
     font-size: .9rem;
+}
+.card-body{
+    font-size: .7rem;
 }
 .card-footer{
     font-size: .6rem;
+}
+.spotbie-no-notis-box{
+    position: fixed;
+    left: 0;
+    right: 0;
+    margin: 0 auto;    
+    top: 50%;
+    width: 650px;
+    min-width: 650px;
+    max-width: 650px;
+    transform: translateY(-50%);
+    padding-top: 50px;
+    padding-bottom: 50px;
+    border-radius: 10px;       
+}
+.fa-exclamation-triangle{
+    position: relative;
+    color: #ffc107;
+    font-size: 1rem;
+    bottom: 4px;
+    margin-right: 10px;
 }
 @media (max-width: 650px){
     .spotbie-redeemItem{
         max-width: 94%;
         min-width: 94%;
         width: 94%;
+    }    
+}
+@media (max-width: 460px){
+    .spotbie-no-notis-box{
+        width: 94%;
+        min-width: 94%;
+        max-width: 94%;
     }
 }
