--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.css
@@ -118,5 +118,10 @@ h5{
     }   
     .spotbie-r-success-title{
         font-size: 1rem;
+    }
+    .spotbie-textarea {
+        width: 92%;
+        min-width: 92%;
+        max-width: 92%;
     } 
 }
