--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-creator/reward-creator.component.html
@@ -200,13 +200,13 @@
 
     <div class='sb-v-wrapper' style="display: grid; align-content: center;">
         
-        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">YOUR REWARD UPLOAD WAS SUCCESSFUL</h4>
+        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">UPLOAD SUCCESSFUL</h4>
 
-        <div class="sb-verificationCheck mt-4 mb-4">
-            <i class="fa fa-check sb-text-light-green-gradient"></i>
+        <div class="sb-verificationCheck sb-text-light-green-gradient mt-4 mb-4">
+            <i class="fa fa-check"></i>
         </div>
 
-        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">YOU ARE READY TO START</h4>
+        <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">REWARD IS LIVE</h4>
 
     </div>
 
@@ -216,13 +216,13 @@
 
     <div class='sb-v-wrapper' style="display: grid; align-content: center;">
         
-        <h4 class="spotbie-text-gradient text-uppercase">YOUR REWARD WAS DELETED</h4>
+        <h4 class="spotbie-text-gradient text-uppercase">REWARD WAS DELETED</h4>
 
-        <div class="sb-verificationCheck mt-4 mb-4">
-            <i class="fa fa-check sb-text-light-green-gradient"></i>
+        <div class="sb-verificationCheck sb-text-light-green-gradient mt-4 mb-4">
+            <i class="fa fa-check"></i>
         </div>
 
-        <h4 class="spotbie-text-gradient text-uppercase">CLICK TO CONTINUE</h4>
+        <h4 class="spotbie-text-gradient text-uppercase">CONTINUE</h4>
 
     </div>
 
