--- a/src/app/spotbie/map/info-object/info-object.component.css
+++ b/src/app/spotbie/map/info-object/info-object.component.css
@@ -135,17 +135,21 @@
     z-index: -1;
 }
 .spotbie-info-object-image{
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     margin: 0 auto;
-    width: 300px;
-    min-width: 300px;
-    max-width: 300px;
-    height: 300px;
-    min-height: 300px;
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 100vh;
+    min-height: 100vh;
     background-size: cover !important;
     background-position: center !important;
+    background-repeat: no-repeat !important;
+    z-index: -1;
+    pointer-events: none;    
 }
-
 .spotbie-toast-message{
     position: fixed;
     top: 50%;
@@ -158,17 +162,6 @@
     position: relative;
     margin: 0 auto;
     max-width: 98%;
-}
-.spotbie-info-object-image{
-    position: relative;
-    margin: 0 auto;
-    width: 300px;
-    min-width: 300px;
-    max-width: 300px;
-    height: 300px;
-    min-height: 300px;
-    background-size: cover !important;
-    background-position: center !important;
 }
 .spotbie-search-result-phone{
     position: relative;
@@ -332,6 +325,11 @@ h6.sb-titleGreen{
     color: #1b1a1e !important;
     margin-left: 10px;
 }
+.spotbie-communityMemberDescription{
+    position: relative;
+    margin: 0 auto;
+    max-width: 950px;
+}
 @media (max-width: 1583px) { 
 
 }
@@ -345,7 +343,11 @@ h6.sb-titleGreen{
 
 }
 @media (max-width: 1024px) { 
-
+    .spotbie-communityMemberDescription{
+        max-width: 90%;
+        width: 90%;
+        min-width: 90%;
+    }
 }
 @media (max-width: 900px) { 
     .sb-input{
@@ -412,7 +414,13 @@ h6.sb-titleGreen{
     .spotbie-price-ranges,
     .spotbie-venue-name{
         font-size: .9rem;
-    }             
+    }    
+    .spotbie-communityMemberDescription{
+        max-width: 92%;
+    }        
+    .sb-titleGreen{
+        position: absolute;
+    } 
 }
 @media (max-width: 460px) { 
     .spotbie-info-object-open{
