--- a/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
+++ b/src/app/spotbie/spotbie-logged-in/loyalty-points/loyalty-points.component.html
@@ -6,12 +6,15 @@
 
         <h5 id="sp-lpTitle" class="spotbie-text-gradient text-center text-uppercase mt-4 mb-5">SPOTBIE LOYALTY POINTS</h5>
 
-        <div class="spotbie-lpResetInfo spotbie-text-gradient" 
+        <div class="spotbie-lpResetInfo spotbie-text-gradient text-uppercase mt-3 mb-3" 
               *ngIf="userType !== eAllowedAccountTypes.Personal && loyaltyPointBalance.end_of_month !== null">
+            POINTS RESET ON        
+        </div>
 
-            Points reset on: {{ loyaltyPointBalance.end_of_month | date:'mediumDate' }}
-        
-    </div>
+        <div class="spotbie-lpResetInfo spotbie-text-gradient text-uppercase" 
+              *ngIf="userType !== eAllowedAccountTypes.Personal && loyaltyPointBalance.end_of_month !== null">
+            {{ (loyaltyPointBalance.end_of_month | date : 'mediumDate') || loyaltyPointBalance.end_of_month }}        
+        </div>
 
         <p class="mt-4 mb-4" (click)="initBusinessLoyaltyPoints()">   
             
@@ -29,10 +32,11 @@
 
         </p>    
 
-        <div class='spotbie-text-gradient' 
-                style="cursor: pointer; display: inline-block;"
-                *ngIf="userType !== eAllowedAccountTypes.Personal"
-                (click)="resetMyBalance()">RESET BALANCE <i class='fa fa-refresh'></i></div>
+        <div style="cursor: pointer; display: inline-block;"
+            *ngIf="userType !== eAllowedAccountTypes.Personal"
+            (click)="resetMyBalance()">
+            <span class='spotbie-text-gradient'>RESET BALANCE</span><i class='fa fa-refresh'></i>
+        </div>
 
         <div class='sb-text-light-green-gradient mt-2 mb-4' 
                 *ngIf="userType !== eAllowedAccountTypes.Personal">
