--- a/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
+++ b/src/app/spotbie/spotbie-logged-in/reward-menu/reward-menu.component.css
@@ -112,15 +112,13 @@
         height: 43vw;
         min-height: 43vw;
         max-height: 43vw;
-        font-size: .8rem;    
+        font-size: .8rem;
+        border-radius: 10px;    
     }
     .sb-addMenuItem{
         position: relative;
         margin: 0 auto;
-        font-size: 1rem;
-        height: 100px;
-        min-height: 100px;
-        max-height: 100px;        
+        font-size: 1rem;      
         display: block;
         border: unset;    
         background: unset;
@@ -128,4 +126,18 @@
     .sb-addMenuItem h6{
         font-size: .8rem;
     }
+}
+@media (max-width: 420px){
+
+    .sb-menuItem,
+    .sb-addMenuItem{
+        max-width: 45%;
+        width: 45%;
+        min-width: 45%;
+        height: 43vw;
+        min-height: 43vw;
+        max-height: 43vw;
+        border-radius: 5px;
+    }
+
 }
