--- a/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
+++ b/src/app/spotbie/spotbie-logged-out/log-in/log-in.component.html
@@ -8,7 +8,7 @@
 
   <div class='sb-scroll'>
 
-    <p class='spotbie-text-gradient text-uppercase text-center' id="sign_up_general_instructions" #spotbieSignUpIssues>
+    <p class='spotbie-text-gradient text-uppercase text-center mt-4' id="sign_up_general_instructions" #spotbieSignUpIssues>
       <span  *ngIf="!business">Login to earn rewards with spotbie.</span>
       <span  *ngIf="business">Login to find customers.</span>
     </p>
@@ -138,7 +138,7 @@
 
     <p class='spotbie-rel-div
               spotbie-padding
-              spotnie-login-terms
+              spotbie-login-terms
               spotbie-text-link
               text-uppercase'>
       By Logging in, you are agreeing to <a [routerLink]="['/terms']">OUR TERMS & PRIVACY POLICY.</a>
